@@ -2,6 +2,11 @@ Revision history for Dist-Zilla-Plugin-OSPrereqs
 
 {{$NEXT}}
 
+  [ADDED]
+
+  - detect incorrect usage of plugin from a bundle, rather than allowing
+    invalid code to be silently added to Makefile.PL
+
 0.009     2018-04-21 20:36:30+02:00 Europe/Oslo
 
   [ADDED]
